# shopnexus-embedding

./: main.py  pyproject.toml
src/: app.py
