[project]
name = "shopnexus-embedding"
version = "0.2.0"
description = "Lightweight embedding microservice using BGE-M3"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flagembedding>=1.3.5",
    "flask>=3.1.2",
"pymilvus-model>=0.3.2",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]
